add redux && authorization

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,33 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+  "manifest_version": 3,
+  "version": "0.1.0",
+  "name": "__MSG_extensionName__",
+  "author": "Gabageba",
+  "action": {
+    "default_icon": {
+      "16": "image/anime-list-dark-16.png",
+      "32": "image/anime-list-dark-32.png",
+      "48": "image/anime-list-dark-48.png",
+      "128": "image/anime-list-dark-128.png"
     },
+    "default_area": "navbar",
+    "default_popup": "index.html",
+    "default_title": "__MSG_extensionName__"
+  },
+  "content_scripts": [
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "matches": ["https://shikimori.one/oauth/authorize/*"],
+      "js": ["extensions/jquery-3.6.3.js", "scripts/getAuthCode.js"]
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "default_locale": "en",
+  "description": "__MSG_extensionDescription__",
+  "icons": {
+    "16": "image/anime-list-dark-16.png",
+    "32": "image/anime-list-dark-32.png",
+    "48": "image/anime-list-dark-48.png",
+    "128": "image/anime-list-dark-128.png"
+  },
+  "homepage_url": "https://github.com/Gabageba",
+  "permissions": ["storage"]
 }
