--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-indiana-drag-scroll": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "use-chrome-storage": "^1.0.10",
     "web-vitals": "^2.1.0"
   },
